<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) Treebolic 2019. Bernard Bou <1313ou@gmail.com>
  -->

<resources>

	<string name="app_name">Treebolic WordNet Services</string>
	<string name="wordnet">WordNet</string>

	<!-- services -->
	<string name="service_broadcast_service">Treebolic WordNet Broadcast Service</string>
	<string name="service_aidl_bound_service">Treebolic WordNet AIDL-based Bound Service</string>
	<string name="service_messenger_bound_service">Treebolic WordNet Messenger Bound Service</string>

	<!-- service descriptions -->
	<string name="description_service_broadcast_service">Produces Treebolic model from WordNet data as an Broadcast Service</string>
	<string name="description_service_aidl_bound_service">Produces Treebolic model from WordNet data as an AIDL-based Bound Service</string>
	<string name="description_service_messenger_bound_service">Produces Treebolic model from WordNet data as a Messenger Bound Service</string>

	<!-- title -->
	<string name="title_search">Search</string>
	<string name="title_query">Run</string>
	<string name="title_source">Source</string>
	<string name="title_activity_query_file_provider">Read WordNet Provider</string>
	<string name="title_query_file_provider">Read WordNet provider</string>
	<string name="title_cleanup">Clean up WordNet</string>
	<string name="title_demo">Demo</string>
	<string name="title_finish">Finish</string>
	<string name="title_kill">Terminate</string>
	<string name="title_settings">Settings</string>
	<string name="title_settings_service">Settings for service</string>
	<string name="title_activity_app_settings">Application</string>
	<string name="title_status_data_available">Data available status</string>
	<string name="title_choose">Choose</string>
	<string name="title_choose_source">Choose source word</string>

	<!-- actions -->
	<string name="action_ok">OK</string>
	<string name="action_cancel">Cancel</string>

	<!-- button -->
	<string name="get_data">Get data</string>

	<!-- ok/error -->
	<string name="ok_data">Data is available</string>
	<string name="fail_data">Data is unavailable</string>
	<string name="fail_nullquery">Null query</string>
	<string name="fail_nullclient">Null client</string>

</resources>